--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "run-tests.html",
         "test"
     ],
-    "bundle": [ "ui/main.reel" ]
+    "bundle": [
+        "ui/main.reel"
+    ],
+    "homepage": "index.html",
+    "private": true
 }
